kubernetes/4.1_ingress_nginx/foo.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
spec:
  ingressClassName: nginx
  rules:
    - host: k8s.jdhp.org
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: hello
                port:
                  number: 80
            path: /
